--- a/Neon.Web/Resources/Resource.resx
+++ b/Neon.Web/Resources/Resource.resx
@@ -180,4 +180,7 @@
   <data name="User_Property_RepeatPassword" xml:space="preserve">
     <value>Repeat Password</value>
   </data>
+  <data name="Layout_Title_AlreadyActive" xml:space="preserve">
+    <value>Already active</value>
+  </data>
 </root>
