frontend inventory and equipment

--- a/Neon.Web/Resources/Resource.resx
+++ b/Neon.Web/Resources/Resource.resx
@@ -183,4 +183,7 @@
   <data name="Layout_Title_AlreadyActive" xml:space="preserve">
     <value>Already active</value>
   </data>
+  <data name="Layout_Nav_Logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
 </root>
