--- a/Neon.Web/Resources/Resource.resx
+++ b/Neon.Web/Resources/Resource.resx
@@ -186,4 +186,10 @@
   <data name="Layout_Nav_Logout" xml:space="preserve">
     <value>Logout</value>
   </data>
+  <data name="Error_Validation_UsernameInvalidCharacters" xml:space="preserve">
+    <value>Username can only contain letters, digits, dashes and underscores.</value>
+  </data>
+  <data name="Error_Validation_UnexpectedError" xml:space="preserve">
+    <value>Unexpected error occurred.</value>
+  </data>
 </root>
